fix(meal): replace Math.max and Math.min with Math.clamp for rounding average points